# ecuApp

./: .gitignore  CMakeLists.txt  README.md  br2_config  configure
DeploymentScripts/: 0-setUpEnvironment.sh  1-prepareBasicStructure  1-prepareBasicStructure.sh  2-build-busybox  2-copyCommonDeploymentPart.sh  3-buildTheApp  3-copyGlibCSharedLibs.sh  4-copyHTML_CGIContent  5-prepareConfiguration  7-FindDependencies  8-build-Linux-image  8-createRootFileSystemImage  9-build-Linux-image  9-createRootFileSystemImage  9-createRootFileSystemImage.sh  A-FindDependencies  CMakeLists.txt  F-RunSimulation.sh
Src/: CMakeLists.txt  makefile
Src/ATProtocolEngine/: CATProtocolAction.cpp  CATProtocolAction.h  CATProtocolActionFactory.cpp  CATProtocolActionFactory.h  CATProtocolEngine.cpp  CATProtocolEngine.h  CCircularATLineExtractor.cpp  CCircularATLineExtractor.h  CClosePortAction.cpp  CClosePortAction.h  CCompositeAction.cpp  CCompositeAction.h  CMakeLists.txt  COpenPortAction.cpp  COpenPortAction.h  CParameterBundle.cpp  CParameterBundle.h  CResetParamAction.cpp  CResetParamAction.h  CSendAction.cpp  CSendAction.h  CSendParamAction.cpp  CSendParamAction.h  CSerialPortHandler.cpp  CSerialPortHandler.h  CSetParamAction.cpp  CSetParamAction.h  CStartAction.cpp  CStartAction.h  CStartTimeoutAction.cpp  CStartTimeoutAction.h  CStopAction.cpp  CStopAction.h  CStopTimeoutAction.cpp  CStopTimeoutAction.h  CStoreAction.cpp  CStoreAction.h  CWaitAction.cpp  CWaitAction.h  IATLineConsumer.h  (+5 more)
Src/CGIProcessor/: CActionFactory.cpp  CActionFactory.h  CCGIProcessor.cpp  CCGIProcessor.h  CCommandFactory.cpp  CCommandFactory.h  CControllerAction.cpp  CControllerAction.h  CControllerCommand.cpp  CControllerCommand.h  CDummyCommand.cpp  CDummyCommand.h  CEnvironment.cpp  CEnvironment.h  CFactoryItemObject.h  CGIProcessorConst.h  CGetMemInfoAction.cpp  CGetMemInfoAction.h  CMakeLists.txt  CProxyProvider.cpp  CProxyProvider.h  IAction.h  ICommand.h  Makefile
Src/CSM/: CAction.cpp  CAction.h  CActionFactory.cpp  CArgoConfigurator.cpp  CArgoConfigurator.h  CGenericAction.h  CMakeLists.txt  CState.cpp  CState.h  CStateMachine.cpp  CStateMachine.h  CTransition.cpp  CTransition.h  IAction.h  IActionFactory.h  ICSMBuilder.h  ICondition.h  Makefile
Src/Configuration/: CConfigNode.cpp  CConfigNode.h  CConfiguration.cpp  CConfiguration.h  CMakeLists.txt  CNewProcess.cpp  CNewProcess.h  CParameter.cpp  CParameter.h  ConfigurationConst.h  Makefile
Src/Controller/: CController.cpp  CController.h  CMakeLists.txt  CProcessControl.cpp  CProcessControl.h  CProcessHandler.cpp  CProcessHandler.h  CProcessInfo.cpp  CProcessInfo.h  CProcessManager.cpp  CProcessManager.h  CSessionManager.cpp  CSessionManager.h  CWatchdogManager.cpp  CWatchdogManager.h  IProcessControl.h  ISessionManager.h  ISessionStateListener.h  Makefile
Src/ControllerInterface/: CControllerProxy.cpp  CControllerProxy.h  CControllerStub.cpp  CControllerStub.h  CMakeLists.txt  CPublicProcessInfo.cpp  CPublicProcessInfo.h  ControlerInterfaceConst.h  ControllerInterfaceConst.h  ControllerTypes.h  IControllerListener.h  IControllerProxy.h  IControllerServices.h  IProcessStatusReporter.h  Makefile
Src/Example/: CExampleApp.cpp  CExampleApp.h  CMakeLists.txt  Makefile
Src/GSMDaemon/: CGSMDaemon.cpp  CGSMDaemon.h  CGSMDaemonConfiguration.cpp  CGSMDaemonConfiguration.h  CMakeLists.txt  CModemManager.cpp  CModemManager.h  CSMSServiceManager.cpp  CSMSServiceManager.h  CVoiceServiceManager.cpp  CVoiceServiceManager.h  GSMDaemonTypes.h  IGSMDaemonConfiguration.h  IGSMModemService.h  IModemListener.h  ISMSServiceListener.h  IVoiceServiceListener.h
Src/GSMDaemonInterface/: CGSMDaemonProxy.h  CGSMDaemonStub.cpp  CGSMDaemonStub.h  CMakeLists.txt  GSMDaemonInterfaceConst.h  IGSMDaemonService.h
Src/GSMModemSim800L/: ATDSerializer.cpp  ATDSerializer.h  CActionDetermineNextStep.cpp  CActionDetermineNextStep.h  CActionNotifyIncomingSMS.cpp  CActionNotifyIncomingSMS.h  CActionNotifyModemInfo.cpp  CActionNotifyModemInfo.h  CActionNotifyProviderName.cpp  CActionNotifyProviderName.h  CActionNotifyRegistrationState.cpp  CActionNotifyRegistrationState.h  CActionNotifySMSSendFailure.cpp  CActionNotifySMSSendFailure.h  CActionNotifySMSSent.cpp  CActionNotifySMSSent.h  CActionNotifySignalStrength.cpp  CActionNotifySignalStrength.h  CActionNotifyVoiceServiceEvents.cpp  CActionNotifyVoiceServiceEvents.h  CErrorResponse.cpp  CErrorResponse.h  CGSMActionContext.cpp  CGSMActionContext.h  CGSMModemActionFactory.cpp  CGSMModemActionFactory.h  CLIPResponse.cpp  CLIPResponse.h  CMGLResponse.cpp  CMGLResponse.h  CMGSSerializer.cpp  CMGSSerializer.h  CMTIResponse.cpp  CMTIResponse.h  CMakeLists.txt  CModemProtocolLogic.cpp  CModemProtocolLogic.h  COKResponse.cpp  COKResponse.h  COPSResponse.cpp  (+25 more)
Src/Global/: GlobalTypes.h  RuntimeConst.h
Src/JSONLib/: CMakeLists.txt  Makefile
Src/Joystick/: CInputHandler.cpp  CInputHandler.h  CJoystick.cpp  CJoystick.h  Makefile
Src/JoystickInterface/: CJoyState.cpp  CJoyState.h  CJoystickProxy.cpp  CJoystickProxy.h  CJoystickStub.cpp  CJoystickStub.h  JoystickInterfaceConst.h  Makefile
Src/Logger/: CConsoleTarget.cpp  CConsoleTarget.h  CLogManager.cpp  CLogManager.h  CLogMsg.cpp  CLogMsg.h  CLoggingAgent.cpp  CLoggingAgent.h  CMakeLists.txt  CSyslogTarget.cpp  CSyslogTarget.h  ILogAgent.h  ILogTarget.h  Logger.h  LoggerConst.h  Makefile
Src/RBCGateway/: CInitSequenceFileParser.cpp  CInitSequenceFileParser.h  CMsgBase.cpp  CMsgBase.h  CMsgConfigurePID.cpp  CMsgConfigurePID.h  CMsgFactory.cpp  CMsgFactory.h  CMsgResetEncoders.cpp  CMsgResetEncoders.h  CMsgSetAllMotors.cpp  CMsgSetAllMotors.h  CMsgSetCommMode.cpp  CMsgSetCommMode.h  CMsgSetControlMode.cpp  CMsgSetControlMode.h  CMsgSetIO.cpp  CMsgSetIO.h  CMsgSetMotorPosition.cpp  CMsgSetMotorPosition.h  CMsgSetMotorSpeed.cpp  CMsgSetMotorSpeed.h  CMsgSetPosition.cpp  CMsgSetPosition.h  CMsgSetSpeed.cpp  CMsgSetSpeed.h  CRBCGateway.cpp  CRBCGateway.h  CRBCSendThread.cpp  CRBCSendThread.h  IMsgFactory.h  Makefile  RBCTypes.h
Src/Runtime/: CExecutable.cpp  (+29 more)
UnitTestSrc/: CMakeLists.txt
(+168 files in other folders)
