project( ecuApp )

add_compile_options( -Wall -pedantic -std=c++0x )

include_directories ( ${ECUAPP_SRC} )
include_directories ( ${ECUAPP_SRC}/Global)

add_subdirectory ( ATProtocolEngine )
add_subdirectory ( CGIProcessor )
add_subdirectory ( Configuration )
add_subdirectory ( Controller )
add_subdirectory ( ControllerInterface )
add_subdirectory ( CSM )
add_subdirectory ( Example )
add_subdirectory ( GSMModemSim800L )
add_subdirectory ( GSMDaemon )
add_subdirectory ( JSONLib )
add_subdirectory ( Logger )
add_subdirectory ( Runtime )
add_subdirectory ( TTS )
add_subdirectory ( TTSInterface )
add_subdirectory ( UCL )
add_subdirectory ( XMLParser )
